# inheritance-chess

./: CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  build_and_run_project.cmake  main.cpp
.github/: custom.css
.github/workflows/: integration-test  integration-test.yml
cbm/: CMakeLists.txt
cbm/include/: board_manager.h
cbm/src/: board_manager.cpp
cci/: CMakeLists.txt  README.md
cci/include/: chess_types.h  grid.h  position.h
cci/src/: chess_types.cpp  grid.cpp  move.cpp  position.cpp
cci/tests/: test_chess_types.cpp  test_grid.cpp  test_piece_factory.cpp
cei/: CMakeLists.txt
cei/src/: chess_engine.cpp
ces/: CMakeLists.txt
ces/include/: event_system.h
cgh/: CMakeLists.txt  README.md
cgh/include/: game_handler.h
cgh/src/: game_handler.cpp
cgh/tests/: test_game_handler.cpp  test_performance.cpp
chess_board_manager/: CMakeLists.txt  README.md
chess_board_manager/include/: board_manager.h
chess_board_manager/src/: board_manager.cpp
chess_board_manager/tests/: test_board_manager.cpp  test_validation.cpp
chess_common_interface/: CMakeLists.txt  README.md
chess_common_interface/include/: chess_types.h  grid.h  move.h  position.h
chess_common_interface/src/: chess_types.cpp  grid.cpp  move.cpp  position.cpp
chess_common_interface/tests/: test_grid_adapted.cpp  test_main.cpp  test_move.cpp  test_piece_factory.cpp  test_position.cpp
chess_engine_interface/: CMakeLists.txt  README.md
chess_engine_interface/include/: chess_engine.h
chess_engine_interface/src/: chess_engine.cpp
chess_engine_interface/tests/: test_chess_engine.cpp
chess_event_system/: CMakeLists.txt  README.md
chess_event_system/include/: event_system.h
chess_event_system/src/: event_system.cpp
chess_event_system/tests/: test_event_system.cpp
chess_game_handler/: CMakeLists.txt  README.md
chess_game_handler/include/: game_handler.h
chess_game_handler/src/: 2p_game.cpp  game_handler.cpp  ichess_runner.cpp
chess_game_handler/tests/: test_game_handler.cpp  test_integration.cpp  test_performance.cpp
chess_pieces_logic/: CMakeLists.txt  README.md
chess_pieces_logic/include/: chess_bishop.h  chess_king.h  chess_knight.h  chess_pawn.h  chess_queen.h  chess_rook.h  pieces_logic.h
chess_pieces_logic/src/: chess_bishop.cpp  chess_king.cpp  chess_knight.cpp  chess_pawn.cpp  chess_queen.cpp  chess_rook.cpp  piece_factory.cpp  pieces_logic.cpp
chess_pieces_logic/tests/: test_bishop.cpp  test_chess_pawn.cpp  test_king.cpp  test_knight.cpp  test_pawn.cpp  test_pieces_logic.cpp  test_properties_integration.cpp  test_queen.cpp  test_rook.cpp
chess_translation_unit/: CMakeLists.txt  README.md
chess_translation_unit/include/: translation_unit.h
chess_translation_unit/src/: translation_unit.cpp
chess_translation_unit/tests/: test_fen_parsing.cpp  test_translation_unit.cpp
cmake/: build_2p_game_and_run.cmake  build_and_run_project.cmake  configure_and_build.cmake  detect_generator.cmake  nmake_env_helpers.cmake  run_2p_game.cmake  run_main_runner.cmake  run_tests.cmake
cpl/: CMakeLists.txt
cpl/include/: chess_king.h  chess_knight.h  chess_queen.h  chess_rook.h
cpl/src/: chess_queen.cpp  chess_rook.cpp  piece_factory.cpp  pieces_logic.cpp
ctu/: CMakeLists.txt  README.md
ctu/include/: translation_unit.h
ctu/src/: translation_unit.cpp
ctu/tests/: test_fen_parsing.cpp
include/: bishop.hpp  board.hpp  common.hpp  king.hpp  knight.hpp  pawns.hpp  pieces.hpp  piezas.hpp  queen.hpp  rook.hpp
src/: bishop.cpp  board.cpp  king.cpp  knight.cpp  pawns.cpp  pawns.hpp  pieces.cpp  piezas.cpp  piezas.hpp  queen.cpp  rook.cpp
tests/: CMakeLists.txt  test_board.cpp  test_main.cpp
